--- a/template.yaml
+++ b/template.yaml
@@ -1,11 +1,23 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: Python file including external library
+Parameters:
+  BucketName:
+    Type: String
+  ObjectKey:
+    Type: String
 Resources:
- SampleFunction:
+ PythonTriviaPartyFunction:
   Type: AWS::Serverless::Function
   Properties:
-   Handler: Index.lambda_handler
-   Runtime: python3.7
-   FunctionName: SamplePython
-   CodeUri: ./src #Directory the source file is
+    Handler: Index.lambda_handler
+    Runtime: python3.7
+    FunctionName: PythonTriviaPartyFunction
+    CodeUri:
+      Bucket:
+        Ref: BucketName
+      Key:
+        Ref: ObjectKey
+    Events:
+      AlexaTrigger:
+        Type: AlexaSkill
