--- a/template.yaml
+++ b/template.yaml
@@ -1,6 +1,11 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
 Description: Python file including external library
+Parameters:
+  BucketName:
+    Type: String
+  ObjectKey:
+    Type: String
 Resources:
  PythonTriviaPartyFunction:
   Type: AWS::Serverless::Function
@@ -8,7 +13,11 @@ Resources:
     Handler: Index.lambda_handler
     Runtime: python3.7
     FunctionName: PythonTriviaPartyFunction
-    CodeUri: ./src
+    CodeUri:
+      Bucket:
+        Ref: BucketName
+      Key:
+        Ref: ObjectKey
     Events:
       AlexaTrigger:
         Type: AlexaSkill
